Fixing more spacing issues

--- a/app/webroot/css/application.less
+++ b/app/webroot/css/application.less
@@ -77,6 +77,9 @@ body {
 		}
 	}
 }
+.comments {
+	padding-right:10px;
+}
 
 /** Debugging **/
 pre {
